--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec ts-node ./src/index.ts",
-    "prestart": "npm run build"
+    "prestart": "npm run build",
+    "db:init": "ts-node ./src/database/init.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^2.2.1",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
-    "reflect-metadata": "^0.2.2",
-    "routing-controllers": "^0.11.3"
+    "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
