--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "dev": "nodemon --exec ts-node ./src/index.ts",
     "prestart": "npm run build",
-    "db:init": "ts-node ./src/database/init.ts"
+    "db:init": "ts-node ./src/database/init.ts",
+    "db:migrate:role": "ts-node ./src/database/migrations/add-role-to-user.ts"
   },
   "keywords": [],
   "author": "",
