Saving and persist photoes in s3

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "commonjs",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --exec ts-node ./src/index.ts",
+    "dev": "npm run docker:up && nodemon --exec ts-node ./src/index.ts",
     "prestart": "npm run build",
+    "docker:up": "docker-compose up -d",
     "db:init": "ts-node ./src/database/init.ts",
     "db:migrate:role": "ts-node ./src/database/migrations/add-role-to-user.ts"
   },
@@ -16,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.948.0",
+    "@aws-sdk/s3-request-presigner": "^3.948.0",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
