--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,26 @@
 version: "3.8"
 
 services:
+  postgres:
+    image: postgres:15
+    container_name: poshagam-postgres
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+      - POSTGRES_DB=${POSTGRES_NAME:-poshagam}
+    volumes:
+      - "./postgres-data:/var/lib/postgresql/data"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   minio:
     image: minio/minio:latest
-    container_name: mini-market-minio
+    container_name: poshagam-minio
     ports:
       - "9000:9000"
       - "9001:9001"
