--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "build": "tsc",
     "dev": "npm run docker:up && nodemon --exec ts-node ./src/index.ts",
+    "start": "node dist/index.js",
     "prestart": "npm run build",
     "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
     "db:init": "ts-node ./src/database/init.ts"
   },
   "keywords": [],
