--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.5",
     "@types/multer": "^2.0.0",
+    "@types/pg": "^8.16.0",
     "@types/uuid": "^11.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
