--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "googleapis": "^170.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
     "uuid": "^13.0.0"
