Finalize mail service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
     "baseUrl": ".",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
-  }
+    "experimentalDecorators": true,
+    "skipLibCheck": true,
+    "types": ["node"]
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
