--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.5",
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^7.0.5",
     "@types/pg": "^8.16.0",
     "@types/uuid": "^11.0.0",
     "ts-node": "^10.9.2",
