--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "build": "tsc",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=1500 tsc",
     "dev": "npm run docker:up && nodemon --exec ts-node ./src/index.ts",
     "start": "node dist/index.js",
     "prestart": "npm run build",
@@ -43,6 +43,7 @@
     "@types/nodemailer": "^7.0.5",
     "@types/pg": "^8.16.0",
     "@types/uuid": "^11.0.0",
+    "cross-env": "^10.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
