--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "googleapis": "^170.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
