Restore and increase ram space for build

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "build": "tsc",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=1500 tsc",
     "dev": "npm run docker:up && nodemon --exec ts-node ./src/index.ts",
     "start": "node dist/index.js",
     "prestart": "npm run build",
