--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,9 @@ jobs:
       - name: Debug SSH agent
         run: |
           ssh-add -l
-          ssh -v -o StrictHostKeyChecking=no -p "$DEPLOY_PORT" "$DEPLOY_USER@$DEPLOY_HOST" "echo 'Connected!'"
+          echo "Port: '$DEPLOY_PORT'"  # Проверим порт
+          ssh-keyscan -H "$DEPLOY_HOST" -p "$DEPLOY_PORT" >> ~/.ssh/known_hosts  # Если port non-22
+          ssh -v -o StrictHostKeyChecking=no -o ConnectTimeout=10 -p "${DEPLOY_PORT:-22}" "$DEPLOY_USER@$DEPLOY_HOST" 'echo "SSH connected!"'
 
       - name: Deploy to server
         if: (github.event_name == 'push' && github.ref == 'refs/heads/master') || github.event_name == 'workflow_dispatch'
@@ -44,6 +46,14 @@ jobs:
           DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
           PM2_APP_NAME: ${{ secrets.PM2_APP_NAME || 'poshagam' }}
         run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -p "$DEPLOY_PORT" -H "$DEPLOY_HOST" >> ~/.ssh/known_hosts
-          ssh -o StrictHostKeyChecking=accept-new -p "$DEPLOY_PORT" "$DEPLOY_USER@$DEPLOY_HOST" "set -e && cd $DEPLOY_PATH && git pull origin master && npm ci && npm run build && (pm2 restart $PM2_APP_NAME --update-env || pm2 start dist/index.js --name $PM2_APP_NAME)"
+          # mkdir -p ~/.ssh
+          # ssh-keyscan -p "$DEPLOY_PORT" -H "$DEPLOY_HOST" >> ~/.ssh/known_hosts
+          # ssh -o StrictHostKeyChecking=accept-new -p "$DEPLOY_PORT" "$DEPLOY_USER@$DEPLOY_HOST" "set -e && cd $DEPLOY_PATH && git pull origin master && npm ci && npm run build && (pm2 restart $PM2_APP_NAME --update-env || pm2 start dist/index.js --name $PM2_APP_NAME)"
+          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 -p "${DEPLOY_PORT:-22}" "$DEPLOY_USER@$DEPLOY_HOST" "
+          set -e
+          cd '$DEPLOY_PATH'
+          git pull origin master
+          npm ci
+          npm run build
+          pm2 restart '$PM2_APP_NAME' --update-env || pm2 start dist/index.js --name '$PM2_APP_NAME'
+          "
